# rudicom

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: MR000000.IMA
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  config.toml  dcm.rs  main.rs
cli/src/db/: entry.rs  file.rs  init.surql  init.surreal  into_db_value.rs  mod.rs  record.rs  register.rs
cli/src/server/: http_error.rs  import.rs  json.rs  mod.rs  other.rs
cli/src/server/html/: generators.rs  handler.rs  mod.rs
cli/src/storage/: async_store.rs  mod.rs
cli/src/tools/: error.rs  import.rs  mod.rs  remove.rs  store.rs  verify.rs
fuzzer/: Cargo.toml
fuzzer/src/: main.rs
src/: async_store.rs  cli.rs  config.rs  config.toml  db.rs  dcm.rs  dicom_serde.rs  lib.rs  main.rs  server.rs  storage.rs  tools.rs
src/db/: dimse_access.rs  entry.rs  file.rs  init.surql  into_db_value.rs  mod.rs  record.rs  register.rs  register_manual.rs  register_query.rs  session.rs
src/dimse/: definitions.rs  dispatcher.rs  io.rs  message.rs  mod.rs  payload.rs  tasks.rs
src/file/: async_store.rs  mod.rs
src/server/: handler.rs  html.rs  html_item.rs  http_error.rs  import.rs  json.rs  mod.rs  openapi.yaml  other.rs
src/server/html/: generators.rs  handler.rs  mod.rs  styles.css
src/storage/: async_store.rs  mod.rs
src/tools/: conv.rs  csa.rs  error.rs  filter.rs  import.rs  mod.rs  remove.rs  store.rs  tar.rs  verify.rs
tests/: db_init.rs  filter.rs  invalid_insert.rs  single_dicom.rs  study.rs
tests/common/: dcm.rs  mod.rs
