[package]
name = "rudicom"
version = "0.2.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["html", "dicom-json"]
# enable html interface
html = ["dep:html"]
dicom-json = ["dep:dicom-json"]
dhat-heap = ["dhat"]

[dependencies]
dicom = {version = "0.8", features = ["image"] }
dicom-json = { version = "0.8", optional = true }
clap = { version = "4.5", features = ["derive","color","usage","string"] }
serde_json = "1.0"
surrealdb = {version = "2.1", default-features = false, features = ["kv-surrealkv", "kv-mem", "protocol-http"]}
serde = "1.0"
tokio = { version = "1.43", features = ["signal", "macros", "rt-multi-thread", "fs"] }
glob = "0.3"
config = {version = "0.15", default-features = false, features = ["toml"]}
md5 = "0.7"
strfmt = "0.2.4"
axum = {version = "0.8", features = ["tracing","query"]}
axum-extra = {version = "0.10", features = ["async-read-body","query"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = {version = "0.3", default-features = false}
axum-streams = {version = "0.20", default-features = false, features = ["text","json"]}
html = { version = "0.6", optional = true}
itertools = "0.14"
thiserror = { version = "2.0" }
dhat = { version = "0.3", optional = true }
byte-unit = "5.1"
chrono = "0.4"
base64 = "0.22"
